# boxman

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
boxman/: __init__.py  __main__.py  archive.py  args_parser.py  boxman.py  checksums.py  config.py  constants.py  database.py  database_manager.py  desc.py  download.py  files.py  install_manager.py  local_database.py  repository.py  version.py
boxman/data/: db_info.py  desc.py  mode.py  package_description.py  parsed_arguments.py
boxman/data/config/: boxman.conf.example  repository.py
boxman/database/: local_database.py  remote_database.py
etc/: boxman.conf
ghostman/: __init__.py  config.py
ghostman/data/config/: options.py  repository.py
test/: test_argparser.py  test_config.py  test_desc.py  test_download.py  test_files.py  test_local_database.py  test_repository.py  test_version.py
test/data/: test_db_info.py
